[gd_scene load_steps=17 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://MPFightscene.gd" type="Script" id=2]
[ext_resource path="res://Points_HUD.tscn" type="PackedScene" id=3]
[ext_resource path="res://KellySlab-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Paper.png" type="Texture" id=5]
[ext_resource path="res://Lizard.png" type="Texture" id=6]
[ext_resource path="res://Fragezeichen.png" type="Texture" id=7]
[ext_resource path="res://Stone.png" type="Texture" id=8]
[ext_resource path="res://Spok.png" type="Texture" id=9]
[ext_resource path="res://Scissors.png" type="Texture" id=10]
[ext_resource path="res://GridContainer.gd" type="Script" id=11]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Hbox/Cntr1/LinkeFaust:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hbox/Cntr1/LinkeFaust:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 447, 508 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hbox/Cntr2/RechteFaust:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 447, 508 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Hbox/Cntr2/RechteFaust:rect_rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "Schüttelbewegung Links"
tracks/0/type = "value"
tracks/0/path = NodePath("Hbox/Cntr1/LinkeFaust:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.5, 0.6, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -50.0, 0.0, -50.0, 0.0, -50.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hbox/Cntr1/LinkeFaust:rect_position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.5, 0.6, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 447, 508 ), Vector2( 380, 420 ), Vector2( 447, 508 ), Vector2( 380, 420 ), Vector2( 447, 508 ), Vector2( 380, 420 ), Vector2( 447, 508 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Schüttelbewegung Rechts"
tracks/0/type = "value"
tracks/0/path = NodePath("Hbox/Cntr2/RechteFaust:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.5, 0.6, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 447, 508 ), Vector2( 514, 420 ), Vector2( 447, 508 ), Vector2( 514, 420 ), Vector2( 447, 508 ), Vector2( 514, 420 ), Vector2( 447, 508 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hbox/Cntr2/RechteFaust:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.3, 0.5, 0.6, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 50.0, 0.0, 50.0, 0.0, 50.0, 0.0 ]
}

[sub_resource type="DynamicFont" id=4]
size = 60
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 4 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 1 )
"anims/Schüttelbewegung Links" = SubResource( 2 )
"anims/Schüttelbewegung Rechts" = SubResource( 3 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
"anims/Schüttelbewegung Rechts" = SubResource( 3 )

[node name="Hbox" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cntr1" type="CenterContainer" parent="Hbox"]
margin_right = 958.0
margin_bottom = 1080.0
size_flags_horizontal = 3

[node name="LinkeFaust" type="TextureRect" parent="Hbox/Cntr1"]
margin_left = 447.0
margin_top = 508.0
margin_right = 511.0
margin_bottom = 572.0
rect_pivot_offset = Vector2( 125, 134.5 )
texture = ExtResource( 1 )

[node name="Schere" type="TextureRect" parent="Hbox/Cntr1"]
margin_left = 292.0
margin_top = 444.0
margin_right = 665.0
margin_bottom = 635.0
texture = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stein" type="TextureRect" parent="Hbox/Cntr1"]
margin_left = 354.0
margin_top = 405.0
margin_right = 604.0
margin_bottom = 674.0
texture = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Papier" type="TextureRect" parent="Hbox/Cntr1"]
margin_left = 299.0
margin_top = 439.0
margin_right = 658.0
margin_bottom = 640.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Echse" type="TextureRect" parent="Hbox/Cntr1"]
margin_left = 368.0
margin_top = 388.0
margin_right = 589.0
margin_bottom = 691.0
texture = ExtResource( 6 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spok" type="TextureRect" parent="Hbox/Cntr1"]
margin_left = 350.0
margin_top = 368.0
margin_right = 608.0
margin_bottom = 712.0
texture = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fragezeichen1" type="TextureRect" parent="Hbox/Cntr1"]
modulate = Color( 0.705882, 0.0392157, 0.0392157, 1 )
margin_left = 350.0
margin_top = 368.0
margin_right = 608.0
margin_bottom = 712.0
texture = ExtResource( 7 )

[node name="Cntr2" type="CenterContainer" parent="Hbox"]
margin_left = 962.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3

[node name="RechteFaust" type="TextureRect" parent="Hbox/Cntr2"]
margin_left = 447.0
margin_top = 508.0
margin_right = 511.0
margin_bottom = 572.0
rect_pivot_offset = Vector2( 125, 134.5 )
texture = ExtResource( 1 )
stretch_mode = 4
flip_h = true

[node name="ESchere" type="TextureRect" parent="Hbox/Cntr2"]
margin_left = 292.0
margin_top = 444.0
margin_right = 665.0
margin_bottom = 635.0
texture = ExtResource( 10 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EStein" type="TextureRect" parent="Hbox/Cntr2"]
margin_left = 354.0
margin_top = 405.0
margin_right = 604.0
margin_bottom = 674.0
texture = ExtResource( 8 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EPapier" type="TextureRect" parent="Hbox/Cntr2"]
margin_left = 299.0
margin_top = 439.0
margin_right = 658.0
margin_bottom = 640.0
texture = ExtResource( 5 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EEchse" type="TextureRect" parent="Hbox/Cntr2"]
margin_left = 368.0
margin_top = 388.0
margin_right = 589.0
margin_bottom = 691.0
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ESpok" type="TextureRect" parent="Hbox/Cntr2"]
margin_left = 350.0
margin_top = 368.0
margin_right = 608.0
margin_bottom = 712.0
texture = ExtResource( 9 )
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fragezeichen2" type="TextureRect" parent="Hbox/Cntr2"]
modulate = Color( 0.705882, 0.0392157, 0.0392157, 1 )
margin_left = 350.0
margin_top = 368.0
margin_right = 608.0
margin_bottom = 712.0
texture = ExtResource( 7 )

[node name="Revealtimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="player_selection" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cntr1" type="CenterContainer" parent="player_selection"]
margin_right = 958.0
margin_bottom = 1080.0
size_flags_horizontal = 3

[node name="GridContainer" type="GridContainer" parent="player_selection/cntr1"]
margin_left = 165.0
margin_top = 78.0
margin_right = 792.0
margin_bottom = 1002.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
script = ExtResource( 11 )

[node name="ASchere" type="TextureRect" parent="player_selection/cntr1/GridContainer"]
margin_right = 373.0
margin_bottom = 269.0
texture = ExtResource( 10 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ASchere" type="Button" parent="player_selection/cntr1/GridContainer/ASchere"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AStein" type="TextureRect" parent="player_selection/cntr1/GridContainer"]
margin_left = 377.0
margin_right = 627.0
margin_bottom = 269.0
texture = ExtResource( 8 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AStein" type="Button" parent="player_selection/cntr1/GridContainer/AStein"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="APapier" type="TextureRect" parent="player_selection/cntr1/GridContainer"]
margin_top = 273.0
margin_right = 373.0
margin_bottom = 576.0
texture = ExtResource( 5 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="APapier" type="Button" parent="player_selection/cntr1/GridContainer/APapier"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AEchse" type="TextureRect" parent="player_selection/cntr1/GridContainer"]
margin_left = 377.0
margin_top = 273.0
margin_right = 627.0
margin_bottom = 576.0
texture = ExtResource( 6 )
stretch_mode = 4
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AEchse" type="Button" parent="player_selection/cntr1/GridContainer/AEchse"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ASpok" type="TextureRect" parent="player_selection/cntr1/GridContainer"]
margin_top = 580.0
margin_right = 373.0
margin_bottom = 924.0
texture = ExtResource( 9 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ASpok" type="Button" parent="player_selection/cntr1/GridContainer/ASpok"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cntr2" type="CenterContainer" parent="player_selection"]
margin_left = 962.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3

[node name="Control" parent="." instance=ExtResource( 3 )]
mouse_filter = 2

[node name="Start_game" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.5
margin_top = -39.5
margin_right = 150.5
margin_bottom = 39.5
custom_fonts/font = SubResource( 4 )
text = "Start Game"

[node name="NextRound" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -159.0
margin_top = -39.5
margin_right = 159.0
margin_bottom = 39.5
custom_fonts/font = SubResource( 4 )
text = "Next Round"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Winner" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -129.5
margin_top = -190.0
margin_right = 129.5
margin_bottom = -117.0
custom_fonts/font = SubResource( 4 )
text = "YOU WIN!"
align = 1
valign = 1

[node name="Winner2" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -153.5
margin_top = -190.0
margin_right = 153.5
margin_bottom = -117.0
custom_fonts/font = SubResource( 4 )
text = "YOU LOOSE!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Checktimer" type="Timer" parent="."]
wait_time = 0.1

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -49.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player_1_Name" type="Label" parent="HBoxContainer"]
margin_right = 637.0
margin_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
valign = 1

[node name="vs" type="Label" parent="HBoxContainer"]
margin_left = 641.0
margin_right = 1278.0
margin_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 5 )
text = "vs."
align = 1
valign = 1

[node name="Player_2_Name" type="Label" parent="HBoxContainer"]
margin_left = 1282.0
margin_right = 1920.0
margin_bottom = 49.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 5 )
align = 2
valign = 1

[node name="Waiting_for_Player" type="Label" parent="."]
margin_left = 39.0
margin_top = 37.0
margin_right = 773.0
margin_bottom = 119.0
custom_fonts/font = SubResource( 5 )
text = "Waiting for Player..."

[node name="waitingforPlayerTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="GameReadyTimer" type="Timer" parent="."]
wait_time = 0.1

[node name="GameReadyLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -59.0
margin_top = 52.0
margin_right = 57.0
margin_bottom = 111.0
custom_fonts/font = SubResource( 5 )
text = "(1/2...)"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="Revealtimer" to="." method="_on_Revealtimer_timeout"]
[connection signal="pressed" from="player_selection/cntr1/GridContainer/ASchere/ASchere" to="." method="_on_ASchere_pressed"]
[connection signal="pressed" from="player_selection/cntr1/GridContainer/AStein/AStein" to="." method="_on_AStein_pressed"]
[connection signal="pressed" from="player_selection/cntr1/GridContainer/APapier/APapier" to="." method="_on_APapier_pressed"]
[connection signal="pressed" from="player_selection/cntr1/GridContainer/AEchse/AEchse" to="." method="_on_AEchse_pressed"]
[connection signal="pressed" from="player_selection/cntr1/GridContainer/ASpok/ASpok" to="." method="_on_ASpok_pressed"]
[connection signal="pressed" from="Start_game" to="." method="_on_Start_game_pressed"]
[connection signal="pressed" from="NextRound" to="." method="_on_NextRound_pressed"]
[connection signal="timeout" from="Checktimer" to="." method="_on_Checktimer_timeout"]
[connection signal="timeout" from="waitingforPlayerTimer" to="." method="_on_waitingforPlayerTimer_timeout"]
[connection signal="timeout" from="GameReadyTimer" to="." method="_on_GameReadyTimer_timeout"]

[editable path="Control"]
